fix: styling - Prevent the UI from zooming when tapping in the notes field on mobile - Add margin at the bottom so the "Show all" link doesn't get obscured

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  line-height: 1.4em;
-}
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -16,7 +12,7 @@ body {
   }
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   #root {
     padding: 0;
     min-width: calc(100% - 2em);
@@ -105,10 +101,15 @@ input, textarea {
   padding: 0.5em;
 }
 
+@media screen and (max-width: 600px){
+  #note {
+    font-size: 1rem;
+  }
+}
+
 #submit-row {
-  font-size: 2vh;
-  margin-top: 2rem;
-  margin-bottom: 4rem;
+  margin-top: 2em;
+  margin-bottom: 4em;
 }
 
 .horiz {
@@ -153,9 +154,6 @@ table {
   white-space: pre-line;
   text-align: left;
   margin: 1em;
-  /* max-height: 3em; */
-  /* overflow: scroll; */
-  font-size: 0.75em;
   line-height: 1.1em;
 }
 
